Fixed some of alignment issue for mobile view

--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@
   --tab-width: 120px;
 }
 *, ::before, ::after {
-  box-sizing: inherit;
+  box-sizing: border-box !important;
 }
 
 
@@ -242,7 +242,7 @@ line-height: 1.4;
     border-radius: var(--border-radius);
     background-color: var(--backgroundhover);
     transition: var(--transition);
-    overflow:auto;
+    /* overflow:auto; */
     box-sizing: border-box;
 }
 
@@ -292,7 +292,6 @@ line-height: 1.4;
     position: relative;
     top: 4px;
     width: 300px;
-    flex-shrink: 0;
     height: 1px;
     margin-left: 20px;
     background-color: var(--paragraphfont);
@@ -303,7 +302,6 @@ line-height: 1.4;
     position: relative;
     top: 4px;
     width: 300px;
-    flex-shrink: 0;
     height: 1px;
     margin-right: 20px;
     background-color: var(--paragraphfont);
@@ -311,13 +309,15 @@ line-height: 1.4;
 
 .Projects .project-description {
   font-family: var(--font-sans);
-  color: var(--paragraphfont);
+  color: var(--fontcolor);
   font-size: 14px;
 }
 
 .Projects .project-tech-list {
   display: flex;
   font-family: var(--fontfamily);
+  font-size: var(--fontsize-xss);
+  color: var(--paragraphfont);
   align-items: flex-end;
   -webkit-box-flex: 1;
   flex-grow: 1;
@@ -341,7 +341,7 @@ line-height: 1.4;
 
 .ExperienceContent {
   font-family: var(--font-sans);
-  margin-left: 80px;
+  margin-left: 10px;
 }
 .ExperienceContent ul {
     padding: 0px;
@@ -434,7 +434,7 @@ line-height: 1.4;
 
 .EducationContent {
   font-family: var(--font-sans);
-  margin-left: 80px;
+  margin-left: 10px;
 }
 .EducationContent ul {
     padding: 0px;
@@ -654,55 +654,7 @@ footer .lottie {
     grid-template-columns: none;
     grid-template-rows: none;
   }
-  .Educationinner, .Experienceinner{
-    display: flex;
-    justify-content: flex-start;
-    
-    flex-direction: column;
-  }
-  .EducationMenu, .ExperienceMenu {
-    display: flex;
-    overflow-x: auto;  
-    justify-content: flex-start;
-    align-items: center;
-    width: calc(100% + 100px);
-    padding-inline: 20px;
-    margin-left: -50px;
-    margin-bottom: 30px;
-  }
-  .EducationMenu .EducationTabIndex, .ExperienceMenu .TabIndex {
-      top: auto;
-      bottom: 0px;
-      width: 100%;
-      max-width: var(--tab-width);
-      height: 2px;
-      margin-left: 40px;
-      border-left: 0px;
-      transform: translateX(calc(0 * var(--tab-width)));
-  }
-
-  .EducationMenu button, .ExperienceMenu button {
-    display: flex;
-    -moz-box-pack: center;
-    justify-content: center;
-    -moz-box-align: center;
-    align-items: center;
-    max-width: 190px;
-    padding: 0px 15px;
-    border-left: 0px;
-    font-size: var(--fontsize-xss);
-    border-bottom: 2px solid var(--fontcolor);
-    text-align: center;
-    overflow: hidden;
-    white-space: nowrap;
-  }
-  .EducationMenu button span, .ExperienceMenu  button span {
-    max-width: 90px;
-}
-  .EducationContent, .ExperienceContent {
-    margin-left: 0px;
-    width: 100%;
-  }
+ 
   section {
     padding: 120px 0px;
   }
@@ -799,11 +751,63 @@ footer .lottie {
   }
 }
 @media (max-width: 480px) {
+  
   .EducationMenu button span {
       max-width: 70px;
   }
 }
 
+@media screen and (max-width: 600px) {
+  .Educationinner, .Experienceinner{
+    display: flex;
+    justify-content: flex-start;
+    
+    flex-direction: column;
+  }
+  .EducationMenu, .ExperienceMenu {
+    display: flex;
+    overflow-x: auto !important;  
+    justify-content: flex-start;
+    align-items: center;
+    width: calc(100% + 100px);
+    padding-inline: 20px;
+    margin-left: -50px;
+    margin-bottom: 30px;
+  }
+  .EducationMenu .EducationTabIndex, .ExperienceMenu .TabIndex {
+      top: auto;
+      bottom: 0px;
+      width: 100%;
+      max-width: var(--tab-width);
+      height: 2px;
+      margin-left: 17px;
+      border-left: 0px;
+      transform: translateX(calc(0 * var(--tab-width)));
+  }
+
+  .EducationMenu button, .ExperienceMenu button {
+    display: flex;
+    -moz-box-pack: center;
+    justify-content: center;
+    -moz-box-align: center;
+    align-items: center;
+    max-width: 190px;
+    padding: 0px 15px;
+    border-left: 0px;
+    font-size: var(--fontsize-xss);
+    border-bottom: 2px solid var(--fontcolor);
+    text-align: center;
+    overflow: hidden;
+    white-space: nowrap;
+  }
+  .EducationMenu button span, .ExperienceMenu  button span {
+    max-width: 90px;
+}
+  .EducationContent, .ExperienceContent {
+    margin-left: 0px;
+    width: 100%;
+  }
+}
 
 @media screen and (max-width: 375px) {
   .intro-1 {
@@ -830,4 +834,5 @@ footer .lottie {
 }
 body {
   background-color: var(--background-color);
+  overflow-x: hidden;
 }
