--- a/src/index.css
+++ b/src/index.css
@@ -10,14 +10,13 @@
 html {
   scrollbar-width: thin;
   scrollbar-color: var(--scrollcolor) ;
-
 }
-
 body { 
   margin: 0 auto;
-  overflow-x: hidden;
 }
-
+html, body{
+  overflow-x: hidden !important;
+}
 /* @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
